--- a/src/styles/Categories.css
+++ b/src/styles/Categories.css
@@ -23,6 +23,10 @@
 }
 
 .exercise{
+    display: flex;
+    flex-direction: column;
+    height: 400px;
+    justify-content: space-between;
     border: 1px solid #e0e0e0;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     padding: 2vh 2vh 4vh 2vh;
