--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&family=Teko:wght@400;600;700&family=Whisper&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&family=Teko:wght@400;600;700&family=Whisper&display=swap"); */
+
+html{
+scroll-behavior: smooth;
+}
 
 body {
   margin: 0;
-  font-family: "Teko", sans-serif;
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  scroll-behavior: smooth;
 }
 
 code {
