--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -1,12 +1,25 @@
 .hero-container{
     height: 100vh;
-    background-image: url('../assets/bg_img.png');
+    /* background-image: url('../assets/bg_img.png'); */
+    /* background: url("../assets/bg_vid.mp4"); */
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position: relative;
+}
+
+.hero-container video{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    object-fit: cover;
+    object-position: top;
+    z-index: 0;
+    filter: grayscale(0.7);
+   
 }
 
 .hero-text{
@@ -14,7 +27,9 @@
     width: 50%;
     font-family: 'Teko', sans-serif;
     margin-left: 5vw;
-    animation: transText 2s ease-in-out;
+    animation: transText 1.5s ease-in-out;
+    position: relative;
+    z-index: 1;
 }
 @keyframes transText {
     0% {
@@ -37,7 +52,7 @@
 
 .hero-text span .hero-line{
     height: 2px;
-    width: 50px;
+    width: 30px;
     background-color: tomato;
 }
 
@@ -52,6 +67,7 @@
     font-size: 3rem;
     color: aliceblue;
     margin: 0;
+    margin-bottom: 2rem;
 }
 
 .hero-text h2 b{
